--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oidc-vue",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Wrapper around oidc-client-js to to better work in a Vue application with Vue Router integration.",
   "scripts": {
     "serve": "vue-cli-service serve src/app/main.ts",
@@ -16,11 +16,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "@vue/cli-plugin-babel": "~4.5.12",
-    "@vue/cli-plugin-eslint": "~4.5.12",
-    "@vue/cli-plugin-router": "~4.5.12",
-    "@vue/cli-plugin-typescript": "~4.5.12",
-    "@vue/cli-service": "~4.5.12",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-typescript": "^7.0.0",
     "core-js": "^3.11.0",
     "eslint": "^6.8.0",
@@ -46,5 +46,5 @@
   },
   "homepage": "https://github.com/ahmedsakri/oidc-vue",
   "author": "ahmedsakri <ahmed.f.sakri@gmail.com>",
-  "license": "ISC"
+  "license": "MIT"
 }
