--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 .DS_Store
 node_modules
-/dist
-
+demo*
+**/app/*.d.ts
+!**/app/shims*.d.ts
 
 # local env files
 .env.local
 .env.*.local
-.drone.secrets
-deploy.sh
-deploy-staging.sh
 
 # Log files
 npm-debug.log*
