--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
   "name": "oidc-vue",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Wrapper around oidc-client-js to to better work in a Vue application with Vue Router integration.",
+  "author": "ahmedsakri <ahmed.f.sakri@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "serve": "vue-cli-service serve src/app/main.ts",
-    "serve-async": "vue-cli-service serve src/app/main-async.ts",
-    "build": "vue-cli-service build --target lib src/oidc-vue.ts",
-    "lint": "vue-cli-service lint"
+    "build": "cd vue && npm install --quiet && npm run build"
   },
-  "types": "src/oidc-vue.d.ts",
-  "main": "dist/oidc-vue.umd.min.js",
   "dependencies": {
     "oidc-client": "^1.11.5"
   },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "@vue/cli-plugin-babel": "~4.5.12",
-    "@vue/cli-plugin-eslint": "~4.5.12",
-    "@vue/cli-plugin-router": "~4.5.12",
-    "@vue/cli-plugin-typescript": "~4.5.12",
-    "@vue/cli-service": "~4.5.12",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "core-js": "^3.11.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "typescript": "~4.2.4",
-    "vue": "^2.6.12",
-    "vue-router": "^3.5.1",
-    "vue-template-compiler": "^2.6.12"
-  },
+  "files": [
+    "vue/package.json",
+    "vue/dist/vue-oidc*",
+    "vue/src/vue-oidc*",
+    "polyfill.js"
+  ],
   "keywords": [
     "vue",
     "openid-connect",
@@ -44,7 +30,5 @@
   "bugs": {
     "url": "https://github.com/ahmedsakri/oidc-vue/issues"
   },
-  "homepage": "https://github.com/ahmedsakri/oidc-vue",
-  "author": "ahmedsakri <ahmed.f.sakri@gmail.com>",
-  "license": "ISC"
+  "homepage": "https://github.com/ahmedsakri/oidc-vue-client"
 }
