--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 node_modules
 demo*
-**/app/*.d.ts
-!**/app/shims*.d.ts
+**/sample-app/*.d.ts
+!**/sample-app/shims*.d.ts
 
 # local env files
 .env.local
