--- a/vue2/package.json
+++ b/vue2/package.json
@@ -1,14 +1,13 @@
 {
   "name": "oidc-vue",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve src/sample-app/main.ts",
     "serve-async": "vue-cli-service serve src/sample-app/main-async.ts",
-    "build": "vue-cli-service build --target lib src/oidc-vue.ts",
+    "build": "vue-cli-service build --target lib src/vue-oidc-client.ts",
     "lint": "vue-cli-service lint"
   },
-  "types": "src/oidc-vue.d.ts",
-  "main": "dist/oidc-vue.umd.min.js",
+  "types": "src/vue-oidc-client.d.ts",
+  "main": "dist/vue-oidc-client.umd.min.js",
   "dependencies": {
     "oidc-client": "^1.11.5"
   },
